--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ ACCENT COLOR: #faea51
 
 
 */
+
 * {
   margin: 0;
   padding: 0;
@@ -122,7 +123,7 @@ h1 {
   grid-column-end: 1;
   justify-content: flex-start;
   width: 50%;
-  line-height: 1.2;
+  line-height: 1.3;
 }
 
 .elizabeth-img {
@@ -216,4 +217,45 @@ h1 {
 
 .copyright {
   margin-left: 20px;
+}
+
+/* RESPONSIVE DESIGN */
+@media only screen and (max-width: 820px) {
+  .heading {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .welcome {
+    margin-left: 15px;
+  }
+
+  .about {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    gap: 0;
+    height: 650px;
+  }
+
+  .bio-and-abt {
+    width: 100%;
+    margin: 0;
+    margin-top: 48px;
+  }
+
+  .bio {
+    width: 100%;
+  }
+
+  .elizabeth-img {
+    margin: 32px auto;
+    height: 200px;
+    width: 200px;
+  }
+
+  .project-img {
+    height: 36px;
+    width: 74px;
+  }
 }
